--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,10 @@
 @theme {
     --font-MONO: "IBM Plex Mono", sans-serif
 }
+
+
+body {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
