--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 
 body {
+  overflow: hidden;
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
